<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AkLog</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings2">Informacje</string>
    <string name="title_section1">Dodaj</string>
    <string name="title_section2">Zegar</string>
    <string name="title_section3">Raport</string>
    <string name="title_section4">Simon DX Cluster</string>
    <string name="Band">Frequency</string>
    <string name="Mode">Mode</string>
    <string name="DateStart">Date</string>
    <string name="Callsign">Callsign</string>
    <string name="RST">Raport</string>
    <string name="raport_tekst">Lista QSO</string>
    <string name="Przycisk_dodaj">Dodaj</string>
    <string name="Przycisk_kasuj">Czysc</string>
    <string name="Przycisk_popraw">Popraw</string>
    <string name="Przycisk_wroc">Wróc</string>
    <string-array name="ListaMode">
        <item>LSB</item>
        <item>USB</item>
        <item>FM</item>
        <item>CW</item>
        <item>RTTY</item>
    </string-array>
    <string name="ListaDatePrompt">Okresy</string>
        <string-array name="ListaDate">
        <item>Wszystko</item>
        <item>Dzień</item>
        <item>Tydzień</item>
        <item>Miesiąc</item>
    </string-array>
    <string-array name="ListaSpinerWeb">
        <item>Wybierz Czestotliwosc</item>
        <item>ALL</item>
        <item>HF</item>
        <item>137kHz</item>
        <item>1.8MHz</item>
        <item>3.5MHz</item>
        <item>7MHz</item>
        <item>10MHz</item>
        <item>14MHz</item>
        <item>18MHz</item>
        <item>21MHz</item>
        <item>24MHz</item>
        <item>28MHz</item>
        <item>50MHz</item>
        <item>70MHz</item>
        <item>144MHz</item>
        <item>220MHz</item>
        <item>430MHz</item>    
        <item>HF_dxsummit</item>
        <item>1.8MHz_dxsummit</item>
        <item>3.5MHz_dxsummit</item>
        <item>7MHz_dxsummit</item>
        <item>10MHz_dxsummit</item>
        <item>14MHz_dxsummit</item>
        <item>18MHz_dxsummit</item>
        <item>21MHz_dxsummit</item>
        <item>24MHz_dxsummit</item>
        <item>28MHz_dxsummit</item>
        <item>50MHz_dxsummit</item>
        <item>70MHz_dxsummit</item>
        <item>144MHz_dxsummit</item>
        <item>430MHz_dxsummit</item>  
         
    </string-array>

    <string name="menuusun">Usuń</string>
    <string name="menuedytuj">Edytuj</string>
    <string name="menudetal">Szczególy</string>
    <string name="title_activity_edit_list">EditListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="pdane">Wstaw dane</string>

</resources>
