<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical" >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="2.14" >

           <Button
               android:id="@+id/button1"
               style="?android:attr/buttonStyleSmall"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:onClick="zapiszDbKarta"
               android:text="@string/Przycisk_dodaj"
               android:visibility="gone" />

           <Button
               android:id="@+id/button2"
               style="?android:attr/buttonStyleSmall"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:onClick="kasujPola"
               android:text="@string/Przycisk_kasuj"
               android:visibility="gone" />

           <ImageButton
               android:id="@+id/buttonListaExport1"
               android:layout_width="45dp"
               android:layout_height="45dp"
               android:onClick="zapiszDbKarta"
               android:padding="2dp"
               android:scaleType="fitCenter"
               android:src="@drawable/add" />

           <ImageButton
               android:id="@+id/imageButton2"
               android:layout_width="45dp"
               android:layout_height="45dp"
               android:onClick="kasujPola"
               android:padding="2dp"
               android:scaleType="fitCenter"
               android:src="@drawable/sys_reboot" />
       </LinearLayout>

       <ScrollView
           android:id="@+id/scrollView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" >

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical" >

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:overScrollMode="always"
                   android:scrollbarAlwaysDrawVerticalTrack="true"
                   android:scrollbarStyle="outsideInset" >

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" >

                       <TextView
                           android:id="@+id/textDane"
                           android:layout_width="70dp"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center_vertical"
                           android:text="@string/Band" />

                       <EditText
                           android:id="@+id/editBand"
                           android:layout_width="226dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:ems="10"
                           android:inputType="none|numberDecimal" />
                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" >

                       <TextView
                           android:id="@+id/textDane2"
                           android:layout_width="70dp"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center_vertical"
                           android:text="@string/Mode" />

                       <Spinner
                           android:id="@+id/mode1Spin"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:entries="@array/ListaMode"
                           android:prompt="@string/Mode" />
                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="5dp" >

                       <TextView
                           android:id="@+id/textView3"
                           android:layout_width="70dp"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center_horizontal"
                           android:text="@string/DateStart" />

                       <TextView
                           android:id="@+id/textCzasDodaj"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center_vertical"
                           android:text="test"
                           android:textAppearance="?android:attr/textAppearanceSmall" />
                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" >

                       <TextView
                           android:id="@+id/textView4"
                           android:layout_width="70dp"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center_vertical"
                           android:inputType="text"
                           android:text="@string/Callsign" />

                       <EditText
                           android:id="@+id/editCallsign"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_gravity="right|center_vertical"
                           android:layout_weight="1"
                           android:inputType="textCapCharacters" />
                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" >

                       <TextView
                           android:id="@+id/textView5"
                           android:layout_width="70dp"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center_vertical"
                           android:text="@string/RST" />

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content" >

                           <EditText
                               android:id="@+id/editRstS"
                               android:layout_width="114dp"
                               android:layout_height="wrap_content"
                               android:layout_weight="1"
                               android:ems="10"
                               android:inputType="number"
                               android:maxLength="3" />

                           <EditText
                               android:id="@+id/editRstR"
                               android:layout_width="fill_parent"
                               android:layout_height="wrap_content"
                               android:layout_weight="1"
                               android:ems="10"
                               android:inputType="number"
                               android:maxLength="3" />
                       </LinearLayout>
                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" >

                       <TextView
                           android:id="@+id/textDialogTytul"
                           android:layout_width="70dp"
                           android:layout_height="wrap_content"
                           android:text="Note" />

                       <EditText
                           android:id="@+id/editNote"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:ems="10"
                           android:inputType="textMultiLine" />
                   </LinearLayout>
               </LinearLayout>

               <TextView
                   android:id="@+id/section_label"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

           </LinearLayout>
       </ScrollView>

   </LinearLayout>

</RelativeLayout>